# fireflypad

./: .gitignore  CLAUDE.md  PROJECT.txt  README.md  ai_tools_benchmark.py  analyze_distances.py  commands.py  config.py  database.py  embedding_research.py  generate_test_data.py  main.py  main.sh  manager.py  menu.py  notes.db  ollama_client.py  pyproject.toml  results.txt  session-ses_288c.md  sql_test.py  test_cli.py  test_ollama_client.py  test_ollama_integration.py  tui_main.py  tui_main.sh
.claude/skills/agentskills-author/: SKILL.md
.claude/skills/sqlite-vec/: SKILL.md
dev_docs/: PROJECT_NOTES.md
experiments/: README.md  embedding_research.py  test_ai_tools.py  test_cli.py
fireflypad/: __init__.py
fireflypad/assets/prompts/: system_prompt.md
fireflypad/cli/: cli_adapter.py  main.py
fireflypad/core/: __init__.py  command_handler.py  database.py  manager.py  ollama_client.py
fireflypad/renderers/: __init__.py  cli_renderer.py  tui_renderer.py
fireflypad/tui/: __init__.py  tui_main.py
fireflypad/tui/components/: menu.py
fireflypad/tui/themes/: __init__.py
fireflypad/utils/: __init__.py  getch.py
notepad/: __init__.py
notepad/assets/css/: tui_styles.tcss
notepad/assets/prompts/: system_prompt.md
notepad/cli/: __init__.py  cli_adapter.py  main.py
notepad/core/: __init__.py  command_handler.py  database.py  manager.py  ollama_client.py
notepad/renderers/: cli_renderer.py  tui_renderer.py
notepad/tui/: __init__.py  tui_main.py
notepad/tui/components/: __init__.py  menu.py
notepad/tui/styles/: __init__.py
notepad/utils/: __init__.py  commands.py  config.py
