[tool.poetry]
name = "notepad"
version = "0.1.0"
description = ""
authors = ["Astro <digital.astronavigator@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.6.1"
sqlite-vec = "^0.1.9"
prompt-toolkit = "^3.0.52"
numpy = "^2.4.4"
termcolor = "^3.3.0"
colorama = "^0.4.6"
getch = "^1.0"
scipy = "^1.14.0"
textual = "^0.80.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
