[tool.poetry]
name = "fireflypad"
version = "0.1.0"
description = "FireflyPad - Intelligent note-taking with vector search and AI integration"
authors = ["Astro <digital.astronavigator@gmail.com>"]
readme = "README.md"
package-mode = true

[tool.poetry.scripts]
fireflypad = "fireflypad.cli.main:main"
fireflypad-tui = "fireflypad.tui.tui_main:main"

[tool.poetry.dependencies]
python = "^3.12"
ollama = "^0.6.1"
sqlite-vec = "^0.1.9"
prompt-toolkit = "^3.0.52"
numpy = "^2.4.4"
termcolor = "^3.3.0"
colorama = "^0.4.6"
getch = "^1.0"
scipy = "^1.14.0"
textual = "^0.80.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
